0.1.2
    Changed recipe for glowing donut.
0.1.1
    Added items:
    -Honey donut,
    -Glowing donut.
    Added craft recipe for:
        all item from 0.1.0 + honey donut + glowing donut.
0.1.0 start of development
    Added items:
    -Donut dough,
    -Berry donut,
    -Donut,
    -Powdered sugar donut,
    -Glazed donut,
    -Caramel donut,
    -Chocolate donut.