@@ -6,5 +6,6 @@
   "item.donutmod.glazed_donut": "Glazed Donut",
   "item.donutmod.caramel_donut": "Caramel Donut",
   "item.donutmod.chocolate_donut": "Chocolate Donut",
-  "item.donutmod.honey_donut": "Honey Donut"
+  "item.donutmod.honey_donut": "Honey Donut",
+  "item.donutmod.glowing_donut": "Glowing Donut"
 }
