@@ -5,5 +5,7 @@
   "item.donutmod.powdered_sugar_donut": "Пончик с сахарной пудрой",
   "item.donutmod.glazed_donut": "Глазированный пончик",
   "item.donutmod.caramel_donut": "Карамельный пончик",
-  "item.donutmod.chocolate_donut": "Шоколадный пончик"
+  "item.donutmod.chocolate_donut": "Шоколадный пончик",
+  "item.donutmod.honey_donut": "Медовый пончик",
+  "item.donutmod.glowing_donut": "Светящийся пончик"
 }
