@@ -1,1 +1,2 @@
-items = glowing_donut:5
+items = glowing_donut:7
+# Uses |items = <item_id>:<light level>| for dynamic lighting. Read more in the OptiFine documentation
