@@ -2,19 +2,10 @@
   "type": "minecraft:crafting_shapeless",
   "ingredients": [
     {
-      "item": "minecraft:glow_berries"
-    },
-    {
       "item": "minecraft:honey_bottle"
     },
     {
       "item": "minecraft:golden_carrot"
-    },
-    {
-      "item": "donutmod:donut"
-    },
-    {
-      "item": "donutmod:donut"
     },
     {
       "item": "donutmod:donut"
