@@ -1,5 +1,9 @@
 0.1.2
     Changed recipe for glowing donut.
+    Updated honey donut texture.
+    Fix for berry donut texture.
+    Glowing donut is now always eatable.
+    Changed the duration from glowing donut, from 6000t to 3600t (3 m)
 0.1.1
     Added items:
     -Honey donut,
